--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "grunt-jadist",
   "description": "Grunt plugin for precompiling jade templates for use by jadist express engine",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "homepage": "https://github.com/devmode/grunt-jadist",
-  "author": {
-    "name": "John Bailey",
-    "email": "john@devmode.com"
-  },
+  "author": "DevMode, Inc. <oss@devmode.com> (http://devmode.com)",
+  "contributors": [
+    "Sean M. Duncan <sean@devmode.com> (http://devmode.com/who)",
+    "John E. Bailey <john@devmode.com> (http://devmode.com/who)"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/devmode/grunt-jadist.git"
@@ -23,17 +24,15 @@
   "engines": {
     "node": ">= 0.8.0"
   },
-  "scripts": {
-    "test": "grunt test"
-  },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.6.0",
+    "grunt": "~0.4.2",
     "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt": "~0.4.2"
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-coffee": "~0.9.0"
   },
   "peerDependencies": {
-    "grunt": "~0.4.2"
+    "grunt": "~0.4.2",
+    "jadist": "~0.1.0"
   },
   "keywords": [
     "grunt",
@@ -42,5 +41,5 @@
     "view",
     "jade",
     "cache"
-  ],
+  ]
 }
