--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-jadist",
   "description": "Grunt plugin for precompiling jade templates for use by jadist express engine",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "homepage": "https://github.com/devmode/grunt-jadist",
   "author": "DevMode, Inc. <oss@devmode.com> (http://devmode.com)",
   "contributors": [
@@ -31,7 +31,9 @@
     "grunt-contrib-coffee": "~0.9.0"
   },
   "peerDependencies": {
-    "grunt": "~0.4.2",
+    "grunt": "~0.4.2"
+  },
+  "dependencies": {
     "jadist": "~0.1.0"
   },
   "keywords": [
