--- a/package.json
+++ b/package.json
@@ -1,40 +1,40 @@
 {
   "name": "grunt-jadist",
   "description": "Grunt plugin for precompiling jade templates for use by jadist express engine",
-  "version": "0.0.3",
-  "homepage": "https://github.com/devmode/grunt-jadist",
-  "author": "DevMode, Inc. <oss@devmode.com> (http://devmode.com)",
+  "version": "0.1.0",
+  "homepage": "https://github.com/bitbutcher/grunt-jadist",
+  "author": "Sean M. Duncan <bitbutcher@gmail.com>",
   "contributors": [
-    "Sean M. Duncan <sean@devmode.com> (http://devmode.com/who)",
     "John E. Bailey <john@devmode.com> (http://devmode.com/who)"
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/devmode/grunt-jadist.git"
+    "url": "git://github.com/bitbutcher/grunt-jadist.git"
   },
   "bugs": {
-    "url": "https://github.com/devmode/grunt-jadist/issues"
+    "url": "https://github.com/bitbutcher/grunt-jadist/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/devmode/grunt-jadist/blob/master/LICENSE-MIT"
+      "url": "https://github.com/bitbutcher/grunt-jadist/blob/master/LICENSE-MIT"
     }
   ],
   "engines": {
-    "node": ">= 0.8.0"
+    "node": "^0.10.35",
+    "npm": "^2.2.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-coffee": "~0.9.0"
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-coffee": "^0.12.0"
   },
   "peerDependencies": {
-    "grunt": "~0.4.2"
+    "grunt": "^0.4.5"
   },
   "dependencies": {
-    "jadist": "~0.1.0"
+    "jadist": "^0.2.0"
   },
   "keywords": [
     "grunt",
