--- a/package.json
+++ b/package.json
@@ -1,41 +1,7 @@
 {
   "name": "grunt-jadist",
+  "version": "0.1.2",
   "description": "Grunt plugin for precompiling jade templates for use by jadist express engine",
-  "version": "0.1.1",
-  "homepage": "https://github.com/bitbutcher/grunt-jadist",
-  "author": "Sean M. Duncan <bitbutcher@gmail.com>",
-  "contributors": [
-    "John E. Bailey <john@devmode.com> (http://devmode.com/who)"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/bitbutcher/grunt-jadist.git"
-  },
-  "bugs": {
-    "url": "https://github.com/bitbutcher/grunt-jadist/issues"
-  },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/bitbutcher/grunt-jadist/blob/master/LICENSE-MIT"
-    }
-  ],
-  "engines": {
-    "node": "^0.10.35",
-    "npm": "^2.2.0"
-  },
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "^0.7.0",
-    "grunt-contrib-coffee": "^0.12.0"
-  },
-  "peerDependencies": {
-    "grunt": "^0.4.5"
-  },
-  "dependencies": {
-    "jadist": "^0.2.1"
-  },
   "keywords": [
     "grunt",
     "plugin",
@@ -43,5 +9,32 @@
     "view",
     "jade",
     "cache"
-  ]
+  ],
+  "homepage": "https://github.com/bitbutcher/grunt-jadist",
+  "bugs": "https://github.com/bitbutcher/grunt-jadist/issues",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/bitbutcher/grunt-jadist.git"
+  },
+  "author": "Sean M. Duncan <bitbutcher@gmail.com>",
+  "contributors": [
+    "John E. Bailey <john@devmode.com> (http://devmode.com/who)"
+  ],
+  "license": "MIT",
+  "engines": {
+    "node": "^0.10.x || ^0.11.x || ^0.12.x",
+    "npm": "^2.2.x"
+  },
+  "peerDependencies": {
+    "grunt": "^0.4.5"
+  },
+  "dependencies": {
+    "jadist": "^0.2.2"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-coffee": "^0.12.0"
+  }
 }
