--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grunt-jadist",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Grunt plugin for precompiling jade templates for use by jadist express engine",
   "keywords": [
     "grunt",
@@ -22,19 +22,19 @@
   ],
   "license": "MIT",
   "engines": {
-    "node": "^0.10.x || ^0.11.x || ^0.12.x",
-    "npm": "^2.2.x"
+    "node": ">=0.10.0 <6.0.0",
+    "npm": ">=2.0.0 <4.0.0"
   },
   "peerDependencies": {
     "grunt": "^0.4.5"
   },
   "dependencies": {
-    "jadist": "^0.2.2"
+    "jadist": "^0.2.3"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "^0.7.0",
-    "grunt-contrib-coffee": "^0.12.0"
+    "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-coffee": "^0.13.0"
   }
 }
